--- a/src/frontend/src/styles.css
+++ b/src/frontend/src/styles.css
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: 2025 2025 robot-visual-perception
+ *
+ * SPDX-License-Identifier: MIT
+ */
+
 * {
   margin: 0;
   padding: 0;
