--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -149,13 +149,13 @@
 }
 
 .video-container {
-  position: relative;
-  display: flex;
-  justify-content: center;
+  position: relative; 
+  display: inline-block;
   margin-bottom: 30px;
 }
 
 .video-stream {
+  display: block; 
   max-width: 100%;
   width: 640px;
   height: auto;
