--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -150,7 +150,8 @@
 
 .video-container {
   position: relative; 
-  display: inline-block;
+  display: flex;
+  justify-content: center;
   margin-bottom: 30px;
 }
 
